--- a/Landing Page.html
+++ b/Landing Page.html
@@ -49,7 +49,7 @@
             z-index: -1;
         }
         .main{
-            position: absolute; /* Position over the video */
+            position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -83,7 +83,7 @@
                     color: #333;
                     text-align: left;
                     font-size: 25px;
-                    margin-top: 100vh; /* Start content below the video */
+                    margin-top: 100vh;
                 }
         
                 .content-section h2 {
@@ -92,11 +92,11 @@
                 }
         
                 .image-container {
-                    display: flex; /* Make sure images are in a row */
-                    overflow-x: auto; /* Allow horizontal scrolling */
-                    gap: 20px; /* Space between images */
+                    display: flex;
+                    overflow-x: auto; 
+                    gap: 20px; 
                     padding: 10px 0;
-                    white-space: nowrap; /* Prevent images from wrapping */
+                    white-space: nowrap;
                     flex-wrap: nowrap; 
                     font-family: Georgia, 'Times New Roman', Times, serif;
                     font-size: 30px;
@@ -108,7 +108,7 @@
                     height: 200px;
                     border-radius: 10px;
                     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-                    flex-shrink: 0; /* Prevent shrinking */
+                    flex-shrink: 0; 
                 }
                 .image-container text {
                     position: absolute;
@@ -116,15 +116,15 @@
                     left: 0;
                     width: 100%;
                     text-align: center;
-                    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+                    background-color: rgba(0, 0, 0, 0.5);
                     color: white;
                     padding: 5px;
                     font-weight: bold;
                     border-radius: 0 0 10px 10px;
                 }
                 .image-item {
-                    position: relative; /* To position text inside the image container */
-                    flex-shrink: 0; /* Prevent shrinking */
+                    position: relative; 
+                    flex-shrink: 0; 
                 }
                 footer{
                     font-size: 20px;
